[gd_scene load_steps=17 format=4 uid="uid://y4yp10org20d"]

[ext_resource type="PackedScene" uid="uid://82aeqqi2rddp" path="res://ui/ui.tscn" id="1_1fom5"]
[ext_resource type="Script" path="res://scenes/level_doors.gd" id="1_8xwqg"]
[ext_resource type="TileSet" uid="uid://c537katjoknov" path="res://world/level_tileset.tres" id="2_nk2l8"]
[ext_resource type="Script" path="res://actors/pluto.gd" id="3_wlukm"]
[ext_resource type="PackedScene" uid="uid://31y11begqd5e" path="res://actors/door.tscn" id="3_ygnou"]
[ext_resource type="Texture2D" uid="uid://bcu5abh8x0doj" path="res://assets/characters/astro_boy_pluto.png" id="4_auelb"]
[ext_resource type="Script" path="res://actors/player_spawner.gd" id="4_jngat"]
[ext_resource type="Script" path="res://scripts/bobing.gd" id="5_fn5pu"]
[ext_resource type="Script" path="res://actors/fake_door.gd" id="8_o8gnh"]
[ext_resource type="SpriteFrames" uid="uid://cu3btbkmvpgbv" path="res://actors/door_spriteframes.tres" id="9_xb2i7"]
[ext_resource type="AudioStream" uid="uid://ko1h6e2bpy25" path="res://assets/door-locked.ogg" id="10_qc5ac"]
[ext_resource type="PackedScene" uid="uid://dlw6umpweb060" path="res://actors/key.tscn" id="12_mwqlm"]
[ext_resource type="PackedScene" uid="uid://beieffefrp6x" path="res://actors/collectible.tscn" id="13_s2ae2"]
[ext_resource type="Resource" uid="uid://bxba1ewkf33g0" path="res://data/fita_erp_somstash.tres" id="14_fqi0e"]
[ext_resource type="Script" path="res://scripts/collectible_data.gd" id="14_ud5ht"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5icyh"]
size = Vector2(30, 47)

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_8xwqg")

[node name="UI" parent="." instance=ExtResource("1_1fom5")]

[node name="Pluto" type="Node2D" parent="."]
position = Vector2(528, 416)
script = ExtResource("3_wlukm")

[node name="Sprite2D" type="Sprite2D" parent="Pluto"]
modulate = Color(1, 1, 1, 0.545098)
z_index = -1
texture = ExtResource("4_auelb")
script = ExtResource("5_fn5pu")

[node name="Label" type="Label" parent="Pluto"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = -280.0
offset_right = 167.0
offset_bottom = -163.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Benvinguts IT.
A on està deployada
la nova versió erp 24.5 ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMap" type="Node2D" parent="."]

[node name="PlayWorld" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAQACAAIAAAAAABMAAQACAAIAAAAAABIAAQACAAIAAAAAABEAAQAHAAIAAAAAAAwAAQADAAIAAAAAAAsAAQADAAIAAAAAAAoAAQADAAIAAAAAAAkAAQADAAIAAAAAAAgAAQADAAIAAAAAAAcAAQADAAIAAAAAAAYAAQADAAIAAAAAAAUAAQADAAIAAAAAAAQAAQADAAIAAAAAAAMAAQAHAAEAAAAAAAIAAQACAAIAAAAAAAEAAQACAAIAAAAAAAAAAQACAAIAAAAjAAAAAQACAAIAAAAiAAAAAQACAAIAAAAhAAAAAQACAAIAAAAgAAAAAQACAAIAAAAfAAAAAQACAAIAAAAeAAAAAQACAAIAAAAdAAAAAQACAAIAAAAcAAAAAQACAAIAAAAbAAAAAQACAAIAAAAaAAAAAQACAAIAAAAZAAAAAQACAAIAAAAYAAAAAQACAAIAAAAXAAAAAQACAAIAAAAWAAAAAQACAAIAAAAVAAAAAQACAAIAAAAUAAAAAQACAAIAAAATAAAAAQACAAIAAAASAAAAAQACAAIAAAARAAAAAQACAAIAAAAQAAAAAQACAAIAAAAPAAAAAQACAAIAAAAOAAAAAQACAAIAAAANAAAAAQACAAIAAAAMAAAAAQACAAIAAAALAAAAAQACAAIAAAAKAAAAAQACAAIAAAAJAAAAAQACAAIAAAAIAAAAAQACAAIAAAAHAAAAAQACAAIAAAAGAAAAAQACAAIAAAAFAAAAAQACAAIAAAAEAAAAAQACAAIAAAADAAAAAQACAAIAAAACAAAAAQACAAIAAAAAABQAAQACAAIAAAAAABUAAQACAAIAAAAAABYAAQACAAIAAAAAABcAAQACAAIAAAAAABgAAQACAAIAAAAHAAEAAQACAAIAAAAHAAIAAQACAAIAAAAHAAMAAQACAAMAAAAHAAQAAQACAAcAAAAHAAUAAQACAAgAAAAHAAYAAQACAAgAAAAHAAcAAQACAAgAAAAHAAgAAQACAAgAAAAHAAkAAQACAAgAAAAHAAoAAQACAAgAAAAHAAsAAQACAAgAAAAHAAwAAQACAAgAAAAHAA0AAQACAAgAAAAHAA4AAQACAAgAAAAHAA8AAQACAAgAAAAHABAAAQACAAkAAAAHABEAAQACAAEAAAAHABIAAQACAAIAAAAHABMAAQACAAIAAAAHABQAAQACAAIAAAAHABUAAQACAAIAAAAHABYAAQACAAIAAAAHABcAAQACAAIAAAAHABgAAQACAAIAAAAIAAEAAQACAAIAAAAIAAIAAQACAAIAAAAIAAMAAQACAAMAAAAIAAQAAQACAAcAAAAIAAUAAQACAAgAAAAIAAYAAQACAAgAAAAIAAcAAQACAAgAAAAIAAgAAQACAAgAAAAIAAkAAQACAAgAAAAIAAoAAQACAAgAAAAIAAsAAQACAAgAAAAIAAwAAQAHAAcAAAAIAA0AAQADAAgAAAAIAA4AAQAHAAgAAAAIAA8AAQACAAgAAAAIABAAAQACAAkAAAAIABEAAQACAAEAAAAIABIAAQACAAIAAAAIABMAAQACAAIAAAAIABQAAQACAAIAAAAIABUAAQACAAIAAAAIABYAAQACAAIAAAAIABcAAQACAAIAAAAIABgAAQACAAIAAAAJAAEAAQACAAIAAAAJAAIAAQACAAIAAAAJAAMAAQACAAMAAAAJAAQAAQACAAcAAAAJAAUAAQACAAgAAAAJAAYAAQACAAgAAAAJAAcAAQACAAgAAAAJAAgAAQACAAgAAAAJAAkAAQACAAgAAAAJAAoAAQACAAgAAAAJAAsAAQACAAgAAAAJAAwAAQACAAkAAAAJAA0AAQABAAUAAAAJAA4AAQACAAcAAAAJAA8AAQACAAgAAAAJABAAAQACAAkAAAAJABEAAQACAAEAAAAJABIAAQACAAIAAAAJABMAAQACAAIAAAAJABQAAQACAAIAAAAJABUAAQACAAIAAAAJABYAAQACAAIAAAAJABcAAQACAAIAAAAJABgAAQACAAIAAAAKAAEAAQACAAIAAAAKAAIAAQACAAIAAAAKAAMAAQACAAMAAAAKAAQAAQACAAcAAAAKAAUAAQACAAgAAAAKAAYAAQACAAgAAAAKAAcAAQACAAgAAAAKAAgAAQACAAgAAAAKAAkAAQACAAgAAAAKAAoAAQACAAgAAAAKAAsAAQACAAgAAAAKAAwAAQACAAkAAAAKAA0AAQACAAUAAAAKAA4AAQACAAcAAAAKAA8AAQACAAgAAAAKABAAAQACAAkAAAAKABEAAQACAAEAAAAKABIAAQACAAIAAAAKABMAAQACAAIAAAAKABQAAQACAAIAAAAKABUAAQACAAIAAAAKABYAAQACAAIAAAAKABcAAQACAAIAAAAKABgAAQACAAIAAAALAAEAAQACAAIAAAALAAIAAQACAAIAAAALAAMAAQACAAMAAAALAAQAAQACAAcAAAALAAUAAQACAAgAAAALAAYAAQACAAgAAAALAAcAAQACAAgAAAALAAgAAQACAAgAAAALAAkAAQACAAgAAAALAAoAAQACAAgAAAALAAsAAQACAAgAAAALAAwAAQACAAkAAAALAA0AAQADAAUAAAALAA4AAQACAAcAAAALAA8AAQACAAgAAAALABAAAQACAAkAAAALABEAAQACAAEAAAALABIAAQACAAIAAAALABMAAQACAAIAAAALABQAAQACAAIAAAALABUAAQACAAIAAAALABYAAQACAAIAAAALABcAAQACAAIAAAALABgAAQACAAIAAAAMAAEAAQACAAIAAAAMAAIAAQACAAIAAAAMAAMAAQACAAMAAAAMAAQAAQACAAcAAAAMAAUAAQACAAgAAAAMAAYAAQACAAgAAAAMAAcAAQACAAgAAAAMAAgAAQACAAgAAAAMAAkAAQACAAgAAAAMAAoAAQACAAgAAAAMAAsAAQACAAgAAAAMAAwAAQAIAAcAAAAMAA0AAQABAAgAAAAMAA4AAQARAAgAAAAMAA8AAQADAAgAAAAMABAAAQAHAAsAAAAMABEAAQACAAEAAAAMABIAAQACAAIAAAAMABMAAQACAAIAAAAMABQAAQACAAIAAAAMABUAAQACAAIAAAAMABYAAQACAAIAAAAMABcAAQACAAIAAAAMABgAAQACAAIAAAANAAEAAQACAAIAAAANAAIAAQACAAIAAAANAAMAAQACAAMAAAANAAQAAQACAAcAAAANAAUAAQACAAgAAAANAAYAAQACAAgAAAANAAcAAQACAAgAAAANAAgAAQACAAgAAAANAAkAAQACAAgAAAANAAoAAQACAAgAAAANAAsAAQACAAgAAAANAAwAAQACAAgAAAANAA0AAQACAAgAAAANAA4AAQACAAkAAAANAA8AAQAFAAUAAAANABAAAQACAAsAAAANABEAAQACAAEAAAANABIAAQACAAIAAAANABMAAQACAAIAAAANABQAAQACAAIAAAANABUAAQACAAIAAAANABYAAQACAAIAAAANABcAAQACAAIAAAANABgAAQACAAIAAAAOAAEAAQACAAIAAAAOAAIAAQACAAIAAAAOAAMAAQACAAMAAAAOAAQAAQACAAcAAAAOAAUAAQACAAgAAAAOAAYAAQACAAgAAAAOAAcAAQACAAgAAAAOAAgAAQACAAgAAAAOAAkAAQACAAgAAAAOAAoAAQACAAgAAAAOAAsAAQACAAgAAAAOAAwAAQAHAAcAAAAOAA0AAQADAAgAAAAOAA4AAQAQAAgAAAAOAA8AAQABAAgAAAAOABAAAQAIAAsAAAAOABEAAQACAAEAAAAOABIAAQACAAIAAAAOABMAAQACAAIAAAAOABQAAQACAAIAAAAOABUAAQACAAIAAAAOABYAAQACAAIAAAAOABcAAQACAAIAAAAOABgAAQACAAIAAAAPAAEAAQACAAIAAAAPAAIAAQACAAIAAAAPAAMAAQACAAMAAAAPAAQAAQACAAcAAAAPAAUAAQACAAgAAAAPAAYAAQACAAgAAAAPAAcAAQACAAgAAAAPAAkAAQACAAgAAAAPAAoAAQACAAgAAAAPAAsAAQACAAgAAAAPAAwAAQACAAkAAAAPAA0AAQABAAUAAAAPAA4AAQACAAcAAAAPAA8AAQACAAgAAAAPABAAAQACAAkAAAAPABEAAQACAAEAAAAPABIAAQACAAIAAAAPABMAAQACAAIAAAAPABQAAQACAAIAAAAPABUAAQACAAIAAAAPABYAAQACAAIAAAAPABcAAQACAAIAAAAPABgAAQACAAIAAAAQAAEAAQACAAIAAAAQAAIAAQACAAIAAAAQAAMAAQACAAMAAAAQAAQAAQACAAcAAAAQAAUAAQACAAgAAAAQAAYAAQACAAgAAAAQAAcAAQACAAgAAAAQAAgAAQACAAgAAAAQAAkAAQACAAgAAAAQAAoAAQACAAgAAAAQAAsAAQACAAgAAAAQAAwAAQACAAkAAAAQAA0AAQACAAUAAAAQAA4AAQACAAcAAAAQAA8AAQACAAgAAAAQABAAAQACAAkAAAAQABEAAQACAAEAAAAQABIAAQACAAIAAAAQABMAAQACAAIAAAAQABQAAQACAAIAAAAQABUAAQACAAIAAAAQABYAAQACAAIAAAAQABcAAQACAAIAAAAQABgAAQACAAIAAAARAAEAAQACAAIAAAARAAIAAQACAAIAAAARAAMAAQACAAMAAAARAAQAAQACAAcAAAARAAUAAQACAAgAAAARAAYAAQACAAgAAAARAAcAAQACAAgAAAARAAgAAQACAAgAAAARAAkAAQACAAgAAAARAAoAAQACAAgAAAARAAsAAQACAAgAAAARAAwAAQACAAkAAAARAA0AAQADAAUAAAARAA4AAQACAAcAAAARAA8AAQACAAgAAAARABAAAQACAAkAAAARABEAAQACAAEAAAARABIAAQACAAIAAAARABMAAQACAAIAAAARABQAAQACAAIAAAARABUAAQACAAIAAAARABYAAQACAAIAAAARABcAAQACAAIAAAARABgAAQACAAIAAAASAAEAAQACAAIAAAASAAIAAQACAAIAAAASAAMAAQACAAMAAAASAAQAAQACAAcAAAASAAUAAQACAAgAAAASAAYAAQACAAgAAAASAAcAAQACAAgAAAASAAgAAQACAAgAAAASAAkAAQACAAgAAAASAAoAAQACAAgAAAASAAsAAQACAAgAAAASAAwAAQAIAAcAAAASAA0AAQABAAgAAAASAA4AAQARAAgAAAASAA8AAQADAAgAAAASABAAAQAHAAsAAAASABEAAQACAAEAAAASABIAAQACAAIAAAASABMAAQACAAIAAAASABQAAQACAAIAAAASABUAAQACAAIAAAASABYAAQACAAIAAAASABcAAQACAAIAAAASABgAAQACAAIAAAATAAEAAQACAAIAAAATAAIAAQACAAIAAAATAAMAAQACAAMAAAATAAQAAQACAAcAAAATAAUAAQACAAgAAAATAAYAAQACAAgAAAATAAcAAQACAAgAAAATAAgAAQACAAgAAAATAAkAAQACAAgAAAATAAoAAQACAAgAAAATAAsAAQACAAgAAAATAAwAAQACAAgAAAATAA0AAQACAAgAAAATAA4AAQACAAkAAAATAA8AAQAFAAUAAAATABAAAQACAAsAAAATABEAAQACAAEAAAATABIAAQACAAIAAAATABMAAQACAAIAAAATABQAAQACAAIAAAATABUAAQACAAIAAAATABYAAQACAAIAAAATABcAAQACAAIAAAATABgAAQACAAIAAAAUAAEAAQACAAIAAAAUAAIAAQACAAIAAAAUAAMAAQACAAMAAAAUAAQAAQACAAcAAAAUAAUAAQACAAgAAAAUAAYAAQACAAgAAAAUAAcAAQACAAgAAAAUAAgAAQACAAgAAAAUAAkAAQACAAgAAAAUAAoAAQACAAgAAAAUAAsAAQACAAgAAAAUAAwAAQAHAAcAAAAUAA0AAQADAAgAAAAUAA4AAQAQAAgAAAAUAA8AAQABAAgAAAAUABAAAQAIAAsAAAAUABEAAQACAAEAAAAUABIAAQACAAIAAAAUABMAAQACAAIAAAAUABQAAQACAAIAAAAUABUAAQACAAIAAAAUABYAAQACAAIAAAAUABcAAQACAAIAAAAUABgAAQACAAIAAAAVAAEAAQACAAIAAAAVAAIAAQACAAIAAAAVAAMAAQACAAMAAAAVAAQAAQACAAcAAAAVAAUAAQACAAgAAAAVAAYAAQACAAgAAAAVAAcAAQACAAgAAAAVAAgAAQACAAgAAAAVAAkAAQACAAgAAAAVAAoAAQACAAgAAAAVAAsAAQACAAgAAAAVAAwAAQACAAkAAAAVAA0AAQABAAUAAAAVAA4AAQACAAcAAAAVAA8AAQACAAgAAAAVABAAAQACAAkAAAAVABEAAQACAAEAAAAVABIAAQACAAIAAAAVABMAAQACAAIAAAAVABQAAQACAAIAAAAVABUAAQACAAIAAAAVABYAAQACAAIAAAAVABcAAQACAAIAAAAVABgAAQACAAIAAAAWAAEAAQACAAIAAAAWAAIAAQACAAIAAAAWAAMAAQACAAMAAAAWAAQAAQACAAcAAAAWAAUAAQACAAgAAAAWAAYAAQACAAgAAAAWAAcAAQACAAgAAAAWAAgAAQACAAgAAAAWAAkAAQACAAgAAAAWAAoAAQACAAgAAAAWAAsAAQACAAgAAAAWAAwAAQACAAkAAAAWAA0AAQACAAUAAAAWAA4AAQACAAcAAAAWAA8AAQACAAgAAAAWABAAAQACAAkAAAAWABEAAQACAAEAAAAWABIAAQACAAIAAAAWABMAAQACAAIAAAAWABQAAQACAAIAAAAWABUAAQACAAIAAAAWABYAAQACAAIAAAAWABcAAQACAAIAAAAWABgAAQACAAIAAAAXAAEAAQACAAIAAAAXAAIAAQACAAIAAAAXAAMAAQACAAMAAAAXAAQAAQACAAcAAAAXAAUAAQACAAgAAAAXAAYAAQACAAgAAAAXAAcAAQACAAgAAAAXAAgAAQACAAgAAAAXAAkAAQACAAgAAAAXAAoAAQACAAgAAAAXAAsAAQACAAgAAAAXAAwAAQACAAkAAAAXAA0AAQADAAUAAAAXAA4AAQACAAcAAAAXAA8AAQACAAgAAAAXABAAAQACAAkAAAAXABEAAQACAAEAAAAXABIAAQACAAIAAAAXABMAAQACAAIAAAAXABQAAQACAAIAAAAXABUAAQACAAIAAAAXABYAAQACAAIAAAAXABcAAQACAAIAAAAXABgAAQACAAIAAAAYAAEAAQACAAIAAAAYAAIAAQACAAIAAAAYAAMAAQACAAMAAAAYAAQAAQACAAcAAAAYAAUAAQACAAgAAAAYAAYAAQACAAgAAAAYAAcAAQACAAgAAAAYAAgAAQACAAgAAAAYAAkAAQACAAgAAAAYAAoAAQACAAgAAAAYAAsAAQACAAgAAAAYAAwAAQAIAAcAAAAYAA0AAQABAAgAAAAYAA4AAQAIAAgAAAAYAA8AAQACAAgAAAAYABAAAQACAAkAAAAYABEAAQACAAEAAAAYABIAAQACAAIAAAAYABMAAQACAAIAAAAYABQAAQACAAIAAAAYABUAAQACAAIAAAAYABYAAQACAAIAAAAYABcAAQACAAIAAAAYABgAAQACAAIAAAAZAAEAAQACAAIAAAAZAAIAAQACAAIAAAAZAAMAAQACAAMAAAAZAAQAAQACAAcAAAAZAAUAAQACAAgAAAAZAAYAAQACAAgAAAAZAAcAAQACAAgAAAAZAAgAAQACAAgAAAAZAAkAAQACAAgAAAAZAAoAAQACAAgAAAAZAAsAAQACAAgAAAAZAAwAAQACAAgAAAAZAA0AAQACAAgAAAAZAA4AAQACAAgAAAAZAA8AAQACAAgAAAAZABAAAQACAAkAAAAZABEAAQACAAEAAAAZABIAAQACAAIAAAAZABMAAQACAAIAAAAZABQAAQACAAIAAAAZABUAAQACAAIAAAAZABYAAQACAAIAAAAZABcAAQACAAIAAAAZABgAAQACAAIAAAAaAAEAAQACAAIAAAAaAAIAAQACAAIAAAAaAAMAAQACAAMAAAAaAAQAAQACAAcAAAAaAAUAAQACAAgAAAAaAAYAAQACAAgAAAAaAAcAAQACAAgAAAAaAAgAAQACAAgAAAAaAAkAAQACAAgAAAAaAAoAAQACAAgAAAAaAAsAAQACAAgAAAAaAAwAAQACAAgAAAAaAA0AAQACAAgAAAAaAA4AAQACAAgAAAAaAA8AAQACAAgAAAAaABAAAQACAAkAAAAaABEAAQACAAEAAAAaABIAAQACAAIAAAAaABMAAQACAAIAAAAaABQAAQACAAIAAAAaABUAAQACAAIAAAAaABYAAQACAAIAAAAaABcAAQACAAIAAAAaABgAAQACAAIAAAAbAAEAAQACAAIAAAAbAAIAAQACAAIAAAAbAAMAAQACAAMAAAAbAAQAAQACAAcAAAAbAAUAAQACAAgAAAAbAAYAAQACAAgAAAAbAAcAAQACAAgAAAAbAAgAAQACAAgAAAAbAAkAAQACAAgAAAAbAAoAAQACAAgAAAAbAAsAAQACAAgAAAAbAAwAAQACAAgAAAAbAA0AAQACAAgAAAAbAA4AAQACAAgAAAAbAA8AAQACAAgAAAAbABAAAQACAAkAAAAbABEAAQACAAEAAAAbABIAAQACAAIAAAAbABMAAQACAAIAAAAbABQAAQACAAIAAAAbABUAAQACAAIAAAAbABYAAQACAAIAAAAbABcAAQACAAIAAAAbABgAAQACAAIAAAAcAAEAAQACAAIAAAAcAAIAAQACAAIAAAAcAAMAAQACAAMAAAAcAAQAAQACAAcAAAAcAAUAAQACAAgAAAAcAAYAAQACAAgAAAAcAAcAAQACAAgAAAAcAAgAAQACAAgAAAAcAAkAAQACAAgAAAAcAAoAAQACAAgAAAAcAAsAAQACAAgAAAAcAAwAAQACAAgAAAAcAA0AAQACAAgAAAAcAA4AAQACAAgAAAAcAA8AAQACAAgAAAAcABAAAQACAAkAAAAcABEAAQACAAEAAAAcABIAAQACAAIAAAAcABMAAQACAAIAAAAcABQAAQACAAIAAAAcABUAAQACAAIAAAAcABYAAQACAAIAAAAcABcAAQACAAIAAAAcABgAAQACAAIAAAAdAAEAAQACAAIAAAAdAAIAAQACAAIAAAAdAAMAAQACAAMAAAAdAAQAAQACAAcAAAAdAAUAAQACAAgAAAAdAAYAAQACAAgAAAAdAAcAAQACAAgAAAAdAAgAAQACAAgAAAAdAAkAAQACAAgAAAAdAAoAAQACAAgAAAAdAAsAAQACAAgAAAAdAAwAAQACAAgAAAAdAA0AAQACAAgAAAAdAA4AAQACAAgAAAAdAA8AAQACAAgAAAAdABAAAQACAAkAAAAdABEAAQACAAEAAAAdABIAAQACAAIAAAAdABMAAQACAAIAAAAdABQAAQACAAIAAAAdABUAAQACAAIAAAAdABYAAQACAAIAAAAdABcAAQACAAIAAAAdABgAAQACAAIAAAAeAAEAAQACAAIAAAAeAAIAAQACAAIAAAAeAAMAAQACAAMAAAAeAAQAAQACAAcAAAAeAAUAAQACAAgAAAAeAAYAAQACAAgAAAAeAAcAAQACAAgAAAAeAAgAAQACAAgAAAAeAAkAAQACAAgAAAAeAAoAAQACAAgAAAAeAAsAAQACAAgAAAAeAAwAAQACAAgAAAAeAA0AAQACAAgAAAAeAA4AAQACAAgAAAAeAA8AAQACAAgAAAAeABAAAQACAAkAAAAeABEAAQACAAEAAAAeABIAAQACAAIAAAAeABMAAQACAAIAAAAeABQAAQACAAIAAAAeABUAAQACAAIAAAAeABYAAQACAAIAAAAeABcAAQACAAIAAAAeABgAAQACAAIAAAAfAAEAAQACAAIAAAAfAAIAAQACAAIAAAAfAAMAAQACAAMAAAAfAAQAAQACAAcAAAAfAAUAAQACAAgAAAAfAAYAAQACAAgAAAAfAAcAAQACAAgAAAAfAAgAAQACAAgAAAAfAAkAAQACAAgAAAAfAAoAAQACAAgAAAAfAAsAAQACAAgAAAAfAAwAAQACAAgAAAAfAA0AAQACAAgAAAAfAA4AAQACAAgAAAAfAA8AAQACAAgAAAAfABAAAQACAAkAAAAfABEAAQACAAEAAAAfABIAAQACAAIAAAAfABMAAQACAAIAAAAfABQAAQACAAIAAAAfABUAAQACAAIAAAAfABYAAQACAAIAAAAfABcAAQACAAIAAAAfABgAAQACAAIAAAAgAAEAAQACAAIAAAAgAAIAAQACAAIAAAAgAAMAAQACAAMAAAAgAAQAAQACAAcAAAAgAAUAAQACAAgAAAAgAAYAAQACAAgAAAAgAAcAAQACAAgAAAAgAAgAAQACAAgAAAAgAAkAAQACAAgAAAAgAAoAAQACAAgAAAAgAAsAAQACAAgAAAAgAAwAAQACAAgAAAAgAA0AAQACAAgAAAAgAA4AAQACAAgAAAAgAA8AAQACAAgAAAAgABAAAQACAAkAAAAgABEAAQACAAEAAAAgABIAAQACAAIAAAAgABMAAQACAAIAAAAgABQAAQACAAIAAAAgABUAAQACAAIAAAAgABYAAQACAAIAAAAgABcAAQACAAIAAAAgABgAAQACAAIAAAAhAAEAAQACAAIAAAAhAAIAAQACAAIAAAAhAAMAAQACAAMAAAAhAAQAAQADAAcAAAAhAAUAAQADAAgAAAAhAAYAAQADAAgAAAAhAAcAAQADAAgAAAAhAAgAAQADAAgAAAAhAAkAAQADAAgAAAAhAAoAAQADAAgAAAAhAAsAAQADAAgAAAAhAAwAAQADAAgAAAAhAA0AAQADAAgAAAAhAA4AAQADAAgAAAAhAA8AAQADAAgAAAAhABAAAQADAAkAAAAhABEAAQACAAEAAAAhABIAAQACAAIAAAAhABMAAQACAAIAAAAhABQAAQACAAIAAAAhABUAAQACAAIAAAAhABYAAQACAAIAAAAhABcAAQACAAIAAAAhABgAAQACAAIAAAAiAAEAAQACAAIAAAAiAAIAAQACAAIAAAAiAAMAAQAIAAEAAAAiAAQAAQABAAIAAAAiAAUAAQABAAIAAAAiAAYAAQABAAIAAAAiAAcAAQABAAIAAAAiAAgAAQABAAIAAAAiAAkAAQABAAIAAAAiAAoAAQABAAIAAAAiAAsAAQABAAIAAAAiAAwAAQABAAIAAAAiAA0AAQABAAIAAAAjAAEAAQACAAIAAAAjAAIAAQACAAIAAAAjAAMAAQACAAIAAAAjAAQAAQACAAIAAAAjAAUAAQACAAIAAAAjAAYAAQACAAIAAAAjAAcAAQACAAIAAAAjAAgAAQACAAIAAAAjAAkAAQACAAIAAAAjAAoAAQACAAIAAAAjAAsAAQACAAIAAAAjAAwAAQACAAIAAAAjAA0AAQACAAIAAAACAAEAAQACAAIAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAcAAAACAAUAAQACAAgAAAACAAYAAQACAAgAAAACAAcAAQACAAgAAAACAAgAAQACAAgAAAACAAkAAQACAAgAAAACAAoAAQACAAgAAAACAAsAAQACAAgAAAACAAwAAQACAAgAAAACAA0AAQACAAgAAAACAA4AAQACAAgAAAACAA8AAQACAAgAAAACABAAAQACAAkAAAACABEAAQACAAEAAAACABIAAQACAAIAAAACABMAAQACAAIAAAACABQAAQACAAIAAAACABUAAQACAAIAAAACABYAAQACAAIAAAACABcAAQACAAIAAAACABgAAQACAAIAAAADAAEAAQACAAIAAAADAAIAAQACAAIAAAADAAMAAQACAAMAAAADAAQAAQACAAcAAAADAAUAAQACAAgAAAADAAYAAQACAAgAAAADAAcAAQACAAgAAAADAAgAAQACAAgAAAADAAkAAQACAAgAAAADAAoAAQACAAgAAAADAAsAAQACAAgAAAADAAwAAQACAAgAAAADAA0AAQACAAgAAAADAA4AAQACAAgAAAADAA8AAQACAAgAAAADABAAAQACAAkAAAADABEAAQACAAEAAAADABIAAQACAAIAAAADABMAAQACAAIAAAADABQAAQACAAIAAAADABUAAQACAAIAAAADABYAAQACAAIAAAADABcAAQACAAIAAAADABgAAQACAAIAAAAEAAEAAQACAAIAAAAEAAIAAQACAAIAAAAEAAMAAQACAAMAAAAEAAQAAQACAAcAAAAEAAUAAQACAAgAAAAEAAYAAQACAAgAAAAEAAcAAQACAAgAAAAEAAgAAQACAAgAAAAEAAkAAQACAAgAAAAEAAoAAQACAAgAAAAEAAsAAQACAAgAAAAEAAwAAQACAAgAAAAEAA0AAQACAAgAAAAEAA4AAQACAAgAAAAEAA8AAQACAAgAAAAEABAAAQACAAkAAAAEABEAAQACAAEAAAAEABIAAQACAAIAAAAEABMAAQACAAIAAAAEABQAAQACAAIAAAAEABUAAQACAAIAAAAEABYAAQACAAIAAAAEABcAAQACAAIAAAAEABgAAQACAAIAAAAFAAEAAQACAAIAAAAFAAIAAQACAAIAAAAFAAMAAQACAAMAAAAFAAQAAQACAAcAAAAFAAUAAQACAAgAAAAFAAYAAQACAAgAAAAFAAcAAQACAAgAAAAFAAgAAQACAAgAAAAFAAkAAQACAAgAAAAFAAoAAQACAAgAAAAFAAsAAQACAAgAAAAFAAwAAQACAAgAAAAFAA0AAQACAAgAAAAFAA4AAQACAAgAAAAFAA8AAQACAAgAAAAFABAAAQACAAkAAAAFABEAAQACAAEAAAAFABIAAQACAAIAAAAFABMAAQACAAIAAAAFABQAAQACAAIAAAAFABUAAQACAAIAAAAFABYAAQACAAIAAAAFABcAAQACAAIAAAAFABgAAQACAAIAAAAGAAEAAQACAAIAAAAGAAIAAQACAAIAAAAGAAMAAQACAAMAAAAGAAQAAQACAAcAAAAGAAUAAQACAAgAAAAGAAYAAQACAAgAAAAGAAcAAQACAAgAAAAGAAgAAQACAAgAAAAGAAkAAQACAAgAAAAGAAoAAQACAAgAAAAGAAsAAQACAAgAAAAGAAwAAQACAAgAAAAGAA0AAQACAAgAAAAGAA4AAQACAAgAAAAGAA8AAQACAAgAAAAGABAAAQACAAkAAAAGABEAAQACAAEAAAAGABIAAQACAAIAAAAGABMAAQACAAIAAAAGABQAAQACAAIAAAAGABUAAQACAAIAAAAGABYAAQACAAIAAAAGABcAAQACAAIAAAAGABgAAQACAAIAAAABAAMAAQACAAMAAAABAAQAAQABAAcAAAABAA0AAQABAAgAAAABAAwAAQABAAgAAAABAAsAAQABAAgAAAABAAoAAQABAAgAAAABAAkAAQABAAgAAAABAAgAAQABAAgAAAABAAcAAQABAAgAAAABAAYAAQABAAgAAAABAAUAAQABAAgAAAABAA8AAQABAAgAAAABAA4AAQABAAgAAAABAAIAAQACAAIAAAD//wAAAQACAAIAAAD//wEAAQACAAIAAAD+/wIAAQACAAIAAAD+/wMAAQACAAIAAAD+/wQAAQACAAIAAAD+/wUAAQACAAIAAAD+/wYAAQACAAIAAAD+/wcAAQACAAIAAAD+/wgAAQACAAIAAAD+/wkAAQACAAIAAAD+/woAAQACAAIAAAD+/wsAAQACAAIAAAD+/wwAAQACAAIAAAD+/w0AAQACAAIAAAD//wwAAQACAAIAAAD//wsAAQACAAIAAAD//woAAQACAAIAAAD//wkAAQACAAIAAAD//wgAAQACAAIAAAD//wcAAQACAAIAAAD//wYAAQACAAIAAAD//wUAAQACAAIAAAD//wQAAQACAAIAAAD//wMAAQACAAIAAAD//wIAAQACAAIAAAABABEAAQACAAEAAAABABAAAQABAAkAAAABABIAAQACAAIAAAABABMAAQACAAIAAAABABQAAQACAAIAAAABABUAAQACAAIAAAABABYAAQACAAIAAAABABcAAQACAAIAAAD//xcAAQACAAIAAAD//xgAAQACAAIAAAD+/xcAAQACAAIAAAD+/xgAAQACAAIAAAABABgAAQACAAIAAAAPAAgAAQACAAgAAAABAAEAAQACAAIAAAD+/wEAAQACAAIAAAD+/wAAAQACAAIAAAAnAB0AAQACAAIAAAAnABwAAQACAAIAAAAnABsAAQACAAIAAAAnABoAAQACAAIAAAAnABkAAQACAAIAAAAnABgAAQACAAIAAAAnABcAAQACAAIAAAAnABYAAQACAAIAAAAnABUAAQACAAIAAAAnABQAAQACAAIAAAAnABMAAQACAAIAAAAnABIAAQACAAIAAAAnABEAAQACAAIAAAAnABAAAQACAAIAAAAnAA8AAQACAAIAAAAnAA4AAQACAAIAAAAnAA0AAQACAAIAAAAnAAwAAQACAAIAAAAmAB0AAQACAAIAAAAmABwAAQACAAIAAAAmABsAAQACAAIAAAAmABoAAQACAAIAAAAmABkAAQACAAIAAAAmABgAAQACAAIAAAAmABcAAQACAAIAAAAmABYAAQACAAIAAAAmABUAAQACAAIAAAAmABQAAQACAAIAAAAmABMAAQACAAIAAAAmABIAAQACAAIAAAAmABEAAQACAAIAAAAmABAAAQACAAIAAAAmAA8AAQACAAIAAAAmAA4AAQACAAIAAAAmAA0AAQACAAIAAAAmAAwAAQACAAIAAAAlAB0AAQACAAIAAAAlABwAAQACAAIAAAAlABsAAQACAAIAAAAlABoAAQACAAIAAAAlABkAAQACAAIAAAAlABgAAQACAAIAAAAlABcAAQACAAIAAAAlABYAAQACAAIAAAAlABUAAQACAAIAAAAlABQAAQACAAIAAAAlABMAAQACAAIAAAAlABIAAQACAAIAAAAlABEAAQACAAIAAAAlABAAAQACAAIAAAAlAA8AAQACAAIAAAAlAA4AAQACAAIAAAAlAA0AAQACAAIAAAAlAAwAAQACAAIAAAAkAB0AAQACAAIAAAAkABwAAQACAAIAAAAkABsAAQACAAIAAAAkABoAAQACAAIAAAAkABkAAQACAAIAAAAkABgAAQACAAIAAAAkABcAAQACAAIAAAAkABYAAQACAAIAAAAkABUAAQACAAIAAAAkABQAAQACAAIAAAAkABMAAQACAAIAAAAkABIAAQACAAIAAAAkABEAAQACAAIAAAAkABAAAQACAAIAAAAkAA8AAQACAAIAAAAkAA4AAQACAAIAAAAkAA0AAQACAAIAAAAkAAwAAQACAAIAAAAjAB0AAQACAAIAAAAjABwAAQACAAIAAAAjABsAAQACAAIAAAAjABoAAQACAAIAAAAjABkAAQACAAIAAAAjABgAAQACAAIAAAAjABcAAQACAAIAAAAjABYAAQACAAIAAAAjABUAAQACAAIAAAAjABQAAQACAAIAAAAjABMAAQACAAIAAAAjABIAAQACAAIAAAAjABEAAQACAAIAAAAjABAAAQACAAIAAAAjAA8AAQACAAIAAAAjAA4AAQACAAIAAAAiAB0AAQACAAIAAAAiABwAAQACAAIAAAAiABsAAQACAAIAAAAiABoAAQACAAIAAAAiABkAAQACAAIAAAAiABgAAQACAAIAAAAiABcAAQACAAIAAAAiABYAAQACAAIAAAAiABUAAQACAAIAAAAiABQAAQACAAIAAAAiABMAAQACAAIAAAAiABIAAQACAAIAAAAiABEAAQAIAAIAAAAiABAAAQABAAIAAAAiAA8AAQABAAIAAAAiAA4AAQABAAIAAAAhAB0AAQACAAIAAAAhABwAAQACAAIAAAAhABsAAQACAAIAAAAhABoAAQACAAIAAAAhABkAAQACAAIAAAAgAB0AAQACAAIAAAAgABwAAQACAAIAAAAgABsAAQACAAIAAAAgABoAAQACAAIAAAAgABkAAQACAAIAAAAqAB4AAQACAAIAAAAqAB0AAQACAAIAAAAqABwAAQACAAIAAAAqABsAAQACAAIAAAAqABoAAQACAAIAAAAqABkAAQACAAIAAAAqABgAAQACAAIAAAAqABcAAQACAAIAAAAqABYAAQACAAIAAAAqABUAAQACAAIAAAApAB4AAQACAAIAAAApAB0AAQACAAIAAAApABwAAQACAAIAAAApABsAAQACAAIAAAApABoAAQACAAIAAAApABkAAQACAAIAAAApABgAAQACAAIAAAApABcAAQACAAIAAAApABYAAQACAAIAAAApABUAAQACAAIAAAAoAB4AAQACAAIAAAAoAB0AAQACAAIAAAAoABwAAQACAAIAAAAoABsAAQACAAIAAAAoABoAAQACAAIAAAAoABkAAQACAAIAAAAoABgAAQACAAIAAAAoABcAAQACAAIAAAAoABYAAQACAAIAAAAoABUAAQACAAIAAAAnAB4AAQACAAIAAAAmAB4AAQACAAIAAAAlAB4AAQACAAIAAAAkAB4AAQACAAIAAAAjAB4AAQACAAIAAAAiAB4AAQACAAIAAAAhAB4AAQACAAIAAAAgAB4AAQACAAIAAAAfAB4AAQACAAIAAAAfAB0AAQACAAIAAAAfABwAAQACAAIAAAAfABsAAQACAAIAAAAfABoAAQACAAIAAAAfABkAAQACAAIAAAAeAB4AAQACAAIAAAAeAB0AAQACAAIAAAAeABwAAQACAAIAAAAeABsAAQACAAIAAAAeABoAAQACAAIAAAAeABkAAQACAAIAAAAdAB4AAQACAAIAAAAdAB0AAQACAAIAAAAdABwAAQACAAIAAAAdABsAAQACAAIAAAAdABoAAQACAAIAAAAdABkAAQACAAIAAAAcAB4AAQACAAIAAAAcAB0AAQACAAIAAAAcABwAAQACAAIAAAAcABsAAQACAAIAAAAcABoAAQACAAIAAAAcABkAAQACAAIAAAAbAB4AAQACAAIAAAAbAB0AAQACAAIAAAAbABwAAQACAAIAAAAbABsAAQACAAIAAAAbABoAAQACAAIAAAAbABkAAQACAAIAAAAaAB4AAQACAAIAAAAaAB0AAQACAAIAAAAaABwAAQACAAIAAAAaABsAAQACAAIAAAAaABoAAQACAAIAAAAaABkAAQACAAIAAAAZAB4AAQACAAIAAAAZAB0AAQACAAIAAAAZABwAAQACAAIAAAAZABsAAQACAAIAAAAZABoAAQACAAIAAAAZABkAAQACAAIAAAAYAB4AAQACAAIAAAAYAB0AAQACAAIAAAAYABwAAQACAAIAAAAYABsAAQACAAIAAAAYABoAAQACAAIAAAAYABkAAQACAAIAAAAXAB4AAQACAAIAAAAXAB0AAQACAAIAAAAXABwAAQACAAIAAAAXABsAAQACAAIAAAAXABoAAQACAAIAAAAXABkAAQACAAIAAAAWAB4AAQACAAIAAAAWAB0AAQACAAIAAAAWABwAAQACAAIAAAAWABsAAQACAAIAAAAWABoAAQACAAIAAAAWABkAAQACAAIAAAAVAB4AAQACAAIAAAAVAB0AAQACAAIAAAAVABwAAQACAAIAAAAVABsAAQACAAIAAAAVABoAAQACAAIAAAAVABkAAQACAAIAAAAUAB4AAQACAAIAAAAUAB0AAQACAAIAAAAUABwAAQACAAIAAAAUABsAAQACAAIAAAAUABoAAQACAAIAAAAUABkAAQACAAIAAAATAB4AAQACAAIAAAATAB0AAQACAAIAAAATABwAAQACAAIAAAATABsAAQACAAIAAAATABoAAQACAAIAAAATABkAAQACAAIAAAASAB4AAQACAAIAAAASAB0AAQACAAIAAAASABwAAQACAAIAAAASABsAAQACAAIAAAASABoAAQACAAIAAAASABkAAQACAAIAAAARAB4AAQACAAIAAAARAB0AAQACAAIAAAARABwAAQACAAIAAAARABsAAQACAAIAAAARABoAAQACAAIAAAARABkAAQACAAIAAAAQAB4AAQACAAIAAAAQAB0AAQACAAIAAAAQABwAAQACAAIAAAAQABsAAQACAAIAAAAQABoAAQACAAIAAAAQABkAAQACAAIAAAAPAB4AAQACAAIAAAAPAB0AAQACAAIAAAAPABwAAQACAAIAAAAPABsAAQACAAIAAAAPABoAAQACAAIAAAAPABkAAQACAAIAAAAOAB4AAQACAAIAAAAOAB0AAQACAAIAAAAOABwAAQACAAIAAAAOABsAAQACAAIAAAAOABoAAQACAAIAAAAOABkAAQACAAIAAAANAB4AAQACAAIAAAANAB0AAQACAAIAAAANABwAAQACAAIAAAANABsAAQACAAIAAAANABoAAQACAAIAAAANABkAAQACAAIAAAAMAB4AAQACAAIAAAAMAB0AAQACAAIAAAAMABwAAQACAAIAAAAMABsAAQACAAIAAAAMABoAAQACAAIAAAAMABkAAQACAAIAAAALAB4AAQACAAIAAAALAB0AAQACAAIAAAALABwAAQACAAIAAAALABsAAQACAAIAAAALABoAAQACAAIAAAALABkAAQACAAIAAAAKAB4AAQACAAIAAAAKAB0AAQACAAIAAAAKABwAAQACAAIAAAAKABsAAQACAAIAAAAKABoAAQACAAIAAAAKABkAAQACAAIAAAAJAB4AAQACAAIAAAAJAB0AAQACAAIAAAAJABwAAQACAAIAAAAJABsAAQACAAIAAAAJABoAAQACAAIAAAAJABkAAQACAAIAAAAIAB4AAQACAAIAAAAIAB0AAQACAAIAAAAIABwAAQACAAIAAAAIABsAAQACAAIAAAAIABoAAQACAAIAAAAIABkAAQACAAIAAAAHAB4AAQACAAIAAAAHAB0AAQACAAIAAAAHABwAAQACAAIAAAAHABsAAQACAAIAAAAHABoAAQACAAIAAAAHABkAAQACAAIAAAAGAB4AAQACAAIAAAAGAB0AAQACAAIAAAAGABwAAQACAAIAAAAGABsAAQACAAIAAAAGABoAAQACAAIAAAAGABkAAQACAAIAAAAFAB4AAQACAAIAAAAFAB0AAQACAAIAAAAFABwAAQACAAIAAAAFABsAAQACAAIAAAAFABoAAQACAAIAAAAFABkAAQACAAIAAAAEAB4AAQACAAIAAAAEAB0AAQACAAIAAAAEABwAAQACAAIAAAAEABsAAQACAAIAAAAEABoAAQACAAIAAAAEABkAAQACAAIAAAADAB4AAQACAAIAAAADAB0AAQACAAIAAAADABwAAQACAAIAAAADABsAAQACAAIAAAADABoAAQACAAIAAAADABkAAQACAAIAAAACAB4AAQACAAIAAAACAB0AAQACAAIAAAACABwAAQACAAIAAAACABsAAQACAAIAAAACABoAAQACAAIAAAACABkAAQACAAIAAAABAB4AAQACAAIAAAABAB0AAQACAAIAAAABABwAAQACAAIAAAABABsAAQACAAIAAAABABoAAQACAAIAAAABABkAAQACAAIAAAAAAB4AAQACAAIAAAAAAB0AAQACAAIAAAAAABwAAQACAAIAAAAAABsAAQACAAIAAAAAABoAAQACAAIAAAAAABkAAQACAAIAAAD//x4AAQACAAIAAAD//x0AAQACAAIAAAD//xwAAQACAAIAAAD//xsAAQACAAIAAAD//xoAAQACAAIAAAD//xkAAQACAAIAAAD+/x4AAQACAAIAAAD+/x0AAQACAAIAAAD+/xwAAQACAAIAAAD+/xsAAQACAAIAAAD+/xoAAQACAAIAAAD+/xkAAQACAAIAAAD9/x4AAQACAAIAAAD9/x0AAQACAAIAAAD9/xwAAQACAAIAAAD9/xsAAQACAAIAAAD9/xoAAQACAAIAAAD9/xkAAQACAAIAAAD9/xgAAQACAAIAAAD8/x4AAQACAAIAAAD8/x0AAQACAAIAAAD8/xwAAQACAAIAAAD8/xsAAQACAAIAAAD8/xoAAQACAAIAAAD8/xkAAQACAAIAAAD8/xgAAQACAAIAAAD7/x4AAQACAAIAAAD7/x0AAQACAAIAAAD7/xwAAQACAAIAAAD7/xsAAQACAAIAAAD7/xoAAQACAAIAAAD7/xkAAQACAAIAAAD7/xgAAQACAAIAAAD6/x4AAQACAAIAAAD6/x0AAQACAAIAAAD6/xwAAQACAAIAAAD6/xsAAQACAAIAAAD6/xoAAQACAAIAAAD6/xkAAQACAAIAAAD6/xgAAQACAAIAAAD9/xcAAQACAAIAAAD5/xgAAQACAAIAAAD//w0AAQACAAIAAAD//w4AAQACAAIAAAD//w8AAQACAAIAAAD//xAAAQACAAIAAAAAABAAAQADAAIAAAAAAA0AAQADAAIAAAAAAA4AAQADAAIAAAAAAA8AAQADAAIAAAD+/w4AAQACAAIAAAD+/xAAAQACAAIAAAD+/w8AAQACAAIAAAD//xEAAQACAAIAAAD//xIAAQACAAIAAAD+/xIAAQACAAIAAAD+/xEAAQACAAIAAAD//xMAAQACAAIAAAD+/xMAAQACAAIAAAD//xQAAQACAAIAAAD9/wEAAQACAAIAAAD9/wAAAQACAAIAAAA=")
tile_set = ExtResource("2_nk2l8")

[node name="Decor" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAALAAcAAgADAAMAAAALAAgAAgADAAQAAAAXAAcAAgACAAMAAAAXAAgAAgACAAQAAAAYAAcAAgADAAMAAAAYAAgAAgADAAQAAAAbAAcAAgACAAMAAAAbAAgAAgACAAQAAAAcAAcAAgADAAMAAAAcAAgAAgADAAQAAAAGAAcAAgACAAMAAAAGAAgAAgACAAQAAAAHAAcAAgADAAMAAAAHAAgAAgADAAQAAAAKAAgAAgACAAQAAAAKAAcAAgACAAMAAAA=")
tile_set = ExtResource("2_nk2l8")

[node name="Background" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_set = ExtResource("2_nk2l8")

[node name="Door" parent="." instance=ExtResource("3_ygnou")]
position = Vector2(528, 392)
next_level = "welcome_level.tscn"

[node name="Label" type="Label" parent="Door"]
offset_left = -24.0
offset_top = -64.0
offset_right = 28.0
offset_bottom = -33.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "serp"
horizontal_alignment = 1

[node name="FakeDoor" type="Node2D" parent="."]
z_index = -1
position = Vector2(720, 392)
script = ExtResource("8_o8gnh")

[node name="Label" type="Label" parent="FakeDoor"]
offset_left = -24.0
offset_top = -64.0
offset_right = 28.0
offset_bottom = -33.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "terp"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DoorSprite" type="AnimatedSprite2D" parent="FakeDoor"]
sprite_frames = ExtResource("9_xb2i7")
animation = &"fakeopen"

[node name="Area2D" type="Area2D" parent="FakeDoor"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakeDoor/Area2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_5icyh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FakeDoor"]
stream = ExtResource("10_qc5ac")

[node name="FakeDoor2" type="Node2D" parent="."]
z_index = -1
position = Vector2(336, 392)
script = ExtResource("8_o8gnh")

[node name="Label" type="Label" parent="FakeDoor2"]
offset_left = -24.0
offset_top = -64.0
offset_right = 28.0
offset_bottom = -33.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "perp"
horizontal_alignment = 1

[node name="DoorSprite" type="AnimatedSprite2D" parent="FakeDoor2"]
sprite_frames = ExtResource("9_xb2i7")
animation = &"fakeopen"

[node name="Area2D" type="Area2D" parent="FakeDoor2"]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="FakeDoor2/Area2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_5icyh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FakeDoor2"]
stream = ExtResource("10_qc5ac")

[node name="PlayerSpawner" type="Marker2D" parent="."]
position = Vector2(128, 392)
script = ExtResource("4_jngat")

[node name="Key" parent="." instance=ExtResource("12_mwqlm")]
position = Vector2(528, 488)
gravity_scale = 0.0

[node name="Collectible" parent="." instance=ExtResource("13_s2ae2")]
position = Vector2(625, 448)
collectible_datas = Array[ExtResource("14_ud5ht")]([ExtResource("14_fqi0e")])

[connection signal="door_open" from="Door" to="Pluto" method="_on_door_door_open"]
[connection signal="fake_open" from="FakeDoor" to="Pluto" method="_on_fake_door_fake_open"]
[connection signal="body_entered" from="FakeDoor/Area2D" to="FakeDoor" method="_on_area_2d_body_entered"]
[connection signal="fake_open" from="FakeDoor2" to="Pluto" method="_on_fake_door_2_fake_open"]
[connection signal="body_entered" from="FakeDoor2/Area2D" to="FakeDoor2" method="_on_area_2d_body_entered"]
